--- a/index.html
+++ b/index.html
@@ -1,41 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Calculator</title>
-        <link rel="stylesheet" href="./css/styles.css">
-        <link rel="icon" type="image/x-icon" href="./images/419-how-to-do-exponents-on-iphone-calculator.jpg">
-        <script src="./script/script.js" defer></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;600&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <main>
-            <div class="calculator">
-                <div class="display">hdhd</div>
-                <div class="buttons-container">
-                    <button class="special-btn" id="all-clear">AC</button>
-                    <button class="special-btn" id="minus">+/-</button>
-                    <button class="special-btn" id="percentage">%</button>
-                    <button class="operator-btn" id="divide">/</button>
-                    <button class="number-btn">7</button>
-                    <button class="number-btn">8</button>
-                    <button class="number-btn">9</button>
-                    <button class="operator-btn" id="multiply">x</button>
-                    <button class="number-btn">4</button>
-                    <button class="number-btn">5</button>
-                    <button class="number-btn">6</button>
-                    <button class="operator-btn" id="subtract">-</button>
-                    <button class="number-btn">1</button>
-                    <button class="number-btn">2</button>
-                    <button class="number-btn">3</button>
-                    <button class="operator-btn" id="add">+</button>
-                    <button class="number-btn zero">0</button>
-                    <button class="special-btn dot">.</button>
-                    <button class="operator-btn" id="solve">=</button>
-                </div>
-            </div>
-        </main>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Calculator</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/419-how-to-do-exponents-on-iphone-calculator.jpg"
+    />
+    <script src="./script/script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+    <main>
+      <div class="calculator">
+        <div class="screen">
+            <div class="previous-screen">0</div>
+            <div class="current-screen">0</div>
+        </div>
+        <div class="buttons-container">
+          <button class="special-btn" id="all-clear">AC</button>
+          <button class="special-btn" id="minus">+/-</button>
+          <button class="special-btn" id="percentage">%</button>
+          <button class="operator-btn" id="divide">/</button>
+          <button class="number-btn">7</button>
+          <button class="number-btn">8</button>
+          <button class="number-btn">9</button>
+          <button class="operator-btn" id="multiply">x</button>
+          <button class="number-btn">4</button>
+          <button class="number-btn">5</button>
+          <button class="number-btn">6</button>
+          <button class="operator-btn" id="subtract">-</button>
+          <button class="number-btn">1</button>
+          <button class="number-btn">2</button>
+          <button class="number-btn">3</button>
+          <button class="operator-btn" id="add">+</button>
+          <button class="number-btn zero">0</button>
+          <button class="special-btn dot">.</button>
+          <button class="solve-btn" id="solve">=</button>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
