Modified the division sign

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <button class="special-btn" id="all-clear">AC</button>
           <button class="special-btn" id="minus">+/-</button>
           <button class="special-btn" id="percentage">%</button>
-          <button class="operator-btn" id="divide">&#xF7</button>
+          <button class="operator-btn" id="divide">÷</button>
           <button class="number-btn">7</button>
           <button class="number-btn">8</button>
           <button class="number-btn">9</button>
