--- a/index.html
+++ b/index.html
@@ -22,29 +22,29 @@
     <main>
       <div class="calculator">
         <div class="screen">
-            <div class="previous-screen">0</div>
-            <div class="current-screen">0</div>
+            <div class="numbers-screen"></div>
+            <div class="result-screen"></div>
         </div>
         <div class="buttons-container">
-          <button class="special-btn" id="all-clear">AC</button>
-          <button class="special-btn" id="minus">+/-</button>
-          <button class="special-btn" id="percentage">%</button>
-          <button class="operator-btn" id="divide">÷</button>
+          <button class="special-btn all-clear" id="all-clear">AC</button>
           <button class="number-btn">7</button>
+          <button class="operator-btn" id="percentage">%</button>
+          <button class="operator-btn" id="divide">÷</button>
           <button class="number-btn">8</button>
           <button class="number-btn">9</button>
-          <button class="operator-btn" id="multiply">x</button>
           <button class="number-btn">4</button>
+          <button class="operator-btn" id="multiply">x</button>
           <button class="number-btn">5</button>
           <button class="number-btn">6</button>
-          <button class="operator-btn" id="subtract">-</button>
           <button class="number-btn">1</button>
+          <button class="operator-btn" id="subtract">-</button>
           <button class="number-btn">2</button>
           <button class="number-btn">3</button>
-          <button class="operator-btn" id="add">+</button>
           <button class="number-btn zero">0</button>
+          <button class="operator-btn" id="add">+</button>
           <button class="special-btn dot">.</button>
-          <button class="solve-btn" id="solve">=</button>
+          <button class="solve-btn equal" id="solve">=</button>
+          <!-- <button class="delete-btn special-btn" id="delete">Delete</button> -->
         </div>
       </div>
     </main>
